# img-dnd-tool

./: .gitignore  AGENTS.md  README.md  index.html  package.json  tsconfig.json  vite.config.ts
.github/workflows/: build.yml  release.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: DropZone.tsx  ErrorDialog.tsx  ExportDropZone.tsx  PresetEditor.tsx  PresetSelector.tsx  PreviewCompare.tsx  ProcessButton.tsx  StepBar.tsx
src/stores/: imageStore.ts  presetStore.ts  themeStore.ts
src/types/: index.ts
